crates/analyzer/tests/snapshots/errors__continue_without_loop_2.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: `continue` outside of a loop
  ┌─ [snippet]:4:5
  │
4 │     continue
  │     ^^^^^^^^ `continue` can only be used inside of a `for` or `while` loop


